RESOLVED FIXED176300
[DFG] NewArrayWithSize(size)'s size does not care negative zero
https://bugs.webkit.org/show_bug.cgi?id=176300
Summary [DFG] NewArrayWithSize(size)'s size does not care negative zero
Yusuke Suzuki
Reported 2017-09-03 04:38:27 PDT
[DFG] NewArrayWithSize(size)'s size does not care negative zero
Attachments
Patch (3.26 KB, patch)
2017-09-03 04:39 PDT, Yusuke Suzuki
no flags
Yusuke Suzuki
Comment 1 2017-09-03 04:39:40 PDT
Yusuke Suzuki
Comment 2 2017-09-08 12:00:03 PDT
Ping? I think it is very simple patch :)
Saam Barati
Comment 3 2017-09-08 12:43:59 PDT
Comment on attachment 319770 [details] Patch r=me
WebKit Commit Bot
Comment 4 2017-09-08 22:19:51 PDT
Comment on attachment 319770 [details] Patch Clearing flags on attachment: 319770 Committed r221807: <http://trac.webkit.org/changeset/221807>
WebKit Commit Bot
Comment 5 2017-09-08 22:19:52 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6 2017-09-27 12:39:26 PDT
Note You need to log in before you can comment on or make changes to this bug.