[DFG] NewArrayWithSize(size)'s size does not care negative zero https://bugs.webkit.org/show_bug.cgi?id=176300

Reviewed by Saam Barati.

JSTests:

* stress/new-array-with-size-div.js: Added.
(shouldBe):
(test):
(i.i):

Source/JavaScriptCore:

NewArrayWithSize(size)'s size does not care negative zero as
is the same to NewTypedArray. We propagate this information
in DFGBackwardsPropagationPhase. This removes negative zero
check in kraken fft's deinterleave function.

* dfg/DFGBackwardsPropagationPhase.cpp:
(JSC::DFG::BackwardsPropagationPhase::propagate):


Canonical link: https://commits.webkit.org/193160@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@221807 268f45cc-cd09-0410-ab3c-d52691b4dbfc