Source/JavaScriptCore/dfg/DFGBackwardsPropagationPhase.cpp
@@ -335,12 +335,8 @@ private:
             break;
         }
             
+        case NewTypedArray:
         case NewArrayWithSize: {
-            node->child1()->mergeFlags(NodeBytecodeUsesAsValue | NodeBytecodeUsesAsInt | NodeBytecodeUsesAsArrayIndex);
-            break;
-        }
-            
-        case NewTypedArray: {
             // Negative zero is not observable. NaN versus undefined are only observable
             // in that you would get a different exception message. So, like, whatever: we
             // claim here that NaN v. undefined is observable.
